--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -67,8 +67,8 @@ services:
       KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: INTERNAL:PLAINTEXT, OUTSIDE:PLAINTEXT
       KAFKA_INTER_BROKER_PROTOCOL_LISTENERS: INTERNAL://:9092, OUTSIDE://:9094
       KAFKA_INTER_BROKER_PROTOCOL_ADVERTISED_LISTENERS: INTERNAL://:9092, OUTSIDE://:9094
-      KAFKA_HEAP_OPTS: -Xmx12G -Xms10G
-      KAFKA_JVM_PERFORMANCE_OPTS: -Xmx12G -Xms10G
+      KAFKA_HEAP_OPTS: "-Xmx512M -Xms256M"
+      
     depends_on:
       - zookeeper
     volumes:
