--- a/docker-compose.env
+++ b/docker-compose.env
@@ -2,7 +2,4 @@ NAMESPACE=
 LOGGER=true
 LOGLEVEL=info
 SERVICEDIR=services
-
-TRANSPORTER=kafka://kafka:9092
-
-
+TRANSPORTER=kafka://localhost:9092
