--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   },
   "dependencies": {
     "kafka-node": "^5.0.0",
+    "kafkajs": "^2.2.0",
     "moleculer": "^0.14.16",
     "moleculer-web": "^0.10.2"
   },
