--- a/package.json
+++ b/package.json
@@ -28,7 +28,11 @@
     "kafka-node": "^5.0.0",
     "kafkajs": "^2.2.0",
     "moleculer": "^0.14.16",
-    "moleculer-web": "^0.10.2"
+    "moleculer-db": "^0.8.19",
+    "moleculer-db-adapter-sequelize": "^0.2.15",
+    "moleculer-web": "^0.10.2",
+    "pg": "^8.8.0",
+    "pg-hstore": "^2.3.4"
   },
   "engines": {
     "node": ">= 12.x.x"
