--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "moleculer": "^0.14.16",
     "moleculer-db": "^0.8.19",
     "moleculer-db-adapter-sequelize": "^0.2.15",
+    "moleculer-prometheus": "^0.2.5",
     "moleculer-web": "^0.10.2",
     "pg": "^8.8.0",
     "pg-hstore": "^2.3.4"
