--- a/docker-compose.env
+++ b/docker-compose.env
@@ -2,4 +2,4 @@ NAMESPACE=nexar-xm
 LOGGER=true
 LOGLEVEL=info
 SERVICEDIR=services
-TRANSPORTER=kafka://kafka:9092
+TRANSPORTER=kafka://kafka-1:19092
