--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,6 +20,20 @@ services:
     networks:
       - internal
   
+  channel:
+    container_name: channel
+    build:
+      context: .
+    image: moleculer-project
+    env_file: docker-compose.env
+    environment:
+      SERVICES: channel
+    depends_on:
+      - zookeeper
+    networks:
+      - internal
+  
+  
   user:
     container_name: user
     build:
@@ -83,21 +97,21 @@ services:
     networks:
       - internal
 
-  kafka:
-    hostname: kafka
-    container_name: kafka
+  kafka-1:
+    hostname: kafka-1
+    container_name: kafka-1
     image: 'confluentinc/cp-kafka:latest'
     environment:
       KAFKA_BROKER_ID: 1
       KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 1
       KAFKA_ZOOKEEPER_CONNECT: zookeeper:2181
-      KAFKA_ADVERTISED_HOST_NAME: kafka
-      KAFKA_ADVERTISED_LISTENERS: INTERNAL://kafka:9092,OUTSIDE://kafka:9094 
+      KAFKA_ADVERTISED_HOST_NAME: kafka-1
+      KAFKA_ADVERTISED_LISTENERS: INTERNAL://kafka-1:19092,OUTSIDE://kafka-1:9094 
       KAFKA_INTER_BROKER_LISTENER_NAME: INTERNAL
-      KAFKA_LISTENERS: INTERNAL://:9092, OUTSIDE://:9094
+      KAFKA_LISTENERS: INTERNAL://:19092, OUTSIDE://:9094
       KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: INTERNAL:PLAINTEXT, OUTSIDE:PLAINTEXT
-      KAFKA_INTER_BROKER_PROTOCOL_LISTENERS: INTERNAL://:9092, OUTSIDE://:9094
-      KAFKA_INTER_BROKER_PROTOCOL_ADVERTISED_LISTENERS: INTERNAL://:9092, OUTSIDE://:9094
+      KAFKA_INTER_BROKER_PROTOCOL_LISTENERS: INTERNAL://:19092, OUTSIDE://:9094
+      KAFKA_INTER_BROKER_PROTOCOL_ADVERTISED_LISTENERS: INTERNAL://:19092, OUTSIDE://:9094
       KAFKA_HEAP_OPTS: "-Xmx512M -Xms256M"
       
     depends_on:
@@ -114,14 +128,14 @@ services:
       platform: linux/arm64
       hostname: control-center
       depends_on:
-        - kafka
+        - kafka-1
       ports:
         - 9021:9021
       expose:
         - 9021
 
       environment:
-        CONTROL_CENTER_BOOTSTRAP_SERVERS: 'kafka:9092'
+        CONTROL_CENTER_BOOTSTRAP_SERVERS: 'kafka-1:19092'
         CONTROL_CENTER_ZOOKEEPER_CONNECT: 'zookeeper:2181'
         CONTROL_CENTER_REPLICATION_FACTOR: 1
         CONTROL_CENTER_INTERNAL_TOPICS_PARTITIONS: 1
@@ -134,21 +148,21 @@ services:
   kafka-topics-generator:
     image: confluentinc/cp-kafka:latest
     depends_on:
-      - kafka
+      - kafka-1
     entrypoint: [ '/bin/sh', '-c' ]
     command: |
       "
-      # blocks until kafka is reachable
-      kafka-topics --bootstrap-server kafka:9092 --list
+      # blocks until kafka-1 is reachable
+      kafka--topics --bootstrap-server kafka-1:19092 --list
 
-      echo -e 'Creating kafka topics'
-      kafka-topics --bootstrap-server kafka:9092 --create --if-not-exists --topic user --replication-factor 1 --partitions 2
-      kafka-topics --bootstrap-server kafka:9092 --create --if-not-exists --topic hub --replication-factor 1 --partitions 2
-      kafka-topics --bootstrap-server kafka:9092 --create --if-not-exists --topic node --replication-factor 1 --partitions 2
-      kafka-topics --bootstrap-server kafka:9092 --create --if-not-exists --topic project --replication-factor 1 --partitions 2
+      echo -e 'Creating kafka-1 topics'
+      kafka-topics --bootstrap-server kafka-1:19092 --create --if-not-exists --topic user --replication-factor 1 --partitions 2
+      kafka-topics --bootstrap-server kafka-1:19092 --create --if-not-exists --topic hub --replication-factor 1 --partitions 2
+      kafka-topics --bootstrap-server kafka-1:19092 --create --if-not-exists --topic node --replication-factor 1 --partitions 2
+      kafka-topics --bootstrap-server kafka-1:19092 --create --if-not-exists --topic project --replication-factor 1 --partitions 2
 
       echo -e 'Successfully created the following topics:'
-      kafka-topics --bootstrap-server kafka:9092 --list
+      kafka-topics --bootstrap-server kafka-1:19092 --list
       "
     networks:
       - internal
