--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -97,27 +97,83 @@ services:
     networks:
       - internal
 
-  kafka-1:
-    hostname: kafka-1
-    container_name: kafka-1
+  kafka1:
+    hostname: kafka1
+    container_name: kafka1
     image: 'confluentinc/cp-kafka:latest'
     environment:
       KAFKA_BROKER_ID: 1
       KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 1
       KAFKA_ZOOKEEPER_CONNECT: zookeeper:2181
-      KAFKA_ADVERTISED_HOST_NAME: kafka-1
-      KAFKA_ADVERTISED_LISTENERS: INTERNAL://kafka-1:19092,OUTSIDE://kafka-1:9094 
+      KAFKA_ADVERTISED_HOST_NAME: kafka1
+      KAFKA_ADVERTISED_LISTENERS: INTERNAL://kafka1:19092,OUTSIDE://kafka1:9092 
       KAFKA_INTER_BROKER_LISTENER_NAME: INTERNAL
-      KAFKA_LISTENERS: INTERNAL://:19092, OUTSIDE://:9094
+      KAFKA_LISTENERS: INTERNAL://:19092, OUTSIDE://:9092
       KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: INTERNAL:PLAINTEXT, OUTSIDE:PLAINTEXT
-      KAFKA_INTER_BROKER_PROTOCOL_LISTENERS: INTERNAL://:19092, OUTSIDE://:9094
-      KAFKA_INTER_BROKER_PROTOCOL_ADVERTISED_LISTENERS: INTERNAL://:19092, OUTSIDE://:9094
+      KAFKA_INTER_BROKER_PROTOCOL_LISTENERS: INTERNAL://:19092, OUTSIDE://:9092
+      KAFKA_INTER_BROKER_PROTOCOL_ADVERTISED_LISTENERS: INTERNAL://:19092, OUTSIDE://:9092
+      KAFKA_DEFAULT_REPLICATION_FACTOR: 3
+      KAFKA_NUM_PARTITIONS: 3
       KAFKA_HEAP_OPTS: "-Xmx512M -Xms256M"
       
     depends_on:
       - zookeeper
     volumes:
-      - ./kafka_data:/kafka_data
+      - ./kafka_data-1:/kafka_data-1
+
+    networks:
+      - internal
+
+  kafka2:
+    hostname: kafka2
+    container_name: kafka2
+    image: 'confluentinc/cp-kafka:latest'
+    environment:
+      KAFKA_BROKER_ID: 2
+      KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 1
+      KAFKA_ZOOKEEPER_CONNECT: zookeeper:2181
+      KAFKA_ADVERTISED_HOST_NAME: kafka2
+      KAFKA_ADVERTISED_LISTENERS: INTERNAL://kafka2:19093,OUTSIDE://kafka2:9093
+      KAFKA_INTER_BROKER_LISTENER_NAME: INTERNAL
+      KAFKA_LISTENERS: INTERNAL://:19093, OUTSIDE://:9093
+      KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: INTERNAL:PLAINTEXT, OUTSIDE:PLAINTEXT
+      KAFKA_INTER_BROKER_PROTOCOL_LISTENERS: INTERNAL://:19093, OUTSIDE://:9093
+      KAFKA_INTER_BROKER_PROTOCOL_ADVERTISED_LISTENERS: INTERNAL://:19093, OUTSIDE://:9093
+      KAFKA_DEFAULT_REPLICATION_FACTOR: 3
+      KAFKA_NUM_PARTITIONS: 3
+      KAFKA_HEAP_OPTS: "-Xmx512M -Xms256M"
+      
+    depends_on:
+      - zookeeper
+    volumes:
+      - ./kafka_data-2:/kafka_data-2
+
+    networks:
+      - internal
+
+  kafka3:
+    hostname: kafka3
+    container_name: kafka3
+    image: 'confluentinc/cp-kafka:latest'
+    environment:
+      KAFKA_BROKER_ID: 3
+      KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 1
+      KAFKA_ZOOKEEPER_CONNECT: zookeeper:2181
+      KAFKA_ADVERTISED_HOST_NAME: kafka3
+      KAFKA_ADVERTISED_LISTENERS: INTERNAL://kafka3:19094,OUTSIDE://kafka2:9094
+      KAFKA_INTER_BROKER_LISTENER_NAME: INTERNAL
+      KAFKA_LISTENERS: INTERNAL://:19094, OUTSIDE://:9094
+      KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: INTERNAL:PLAINTEXT, OUTSIDE:PLAINTEXT
+      KAFKA_INTER_BROKER_PROTOCOL_LISTENERS: INTERNAL://:19094, OUTSIDE://:9094
+      KAFKA_INTER_BROKER_PROTOCOL_ADVERTISED_LISTENERS: INTERNAL://:19094, OUTSIDE://:9094
+      KAFKA_DEFAULT_REPLICATION_FACTOR: 3
+      KAFKA_NUM_PARTITIONS: 3
+      KAFKA_HEAP_OPTS: "-Xmx512M -Xms256M"
+      
+    depends_on:
+      - zookeeper
+    volumes:
+      - ./kafka_data-3:/kafka_data-3
 
     networks:
       - internal
@@ -128,19 +184,19 @@ services:
       platform: linux/arm64
       hostname: control-center
       depends_on:
-        - kafka-1
+        - kafka1
       ports:
         - 9021:9021
       expose:
         - 9021
 
       environment:
-        CONTROL_CENTER_BOOTSTRAP_SERVERS: 'kafka-1:19092'
+        CONTROL_CENTER_BOOTSTRAP_SERVERS: kafka1:19092,kafka2:19093,kafka3:19094
         CONTROL_CENTER_ZOOKEEPER_CONNECT: 'zookeeper:2181'
-        CONTROL_CENTER_REPLICATION_FACTOR: 1
-        CONTROL_CENTER_INTERNAL_TOPICS_PARTITIONS: 1
-        CONTROL_CENTER_MONITORING_INTERCEPTOR_TOPIC_PARTITIONS: 1
-        CONFLUENT_METRICS_TOPIC_REPLICATION: 1
+        CONTROL_CENTER_REPLICATION_FACTOR: 3
+        CONTROL_CENTER_INTERNAL_TOPICS_PARTITIONS: 3
+        CONTROL_CENTER_MONITORING_INTERCEPTOR_TOPIC_PARTITIONS: 3
+        CONFLUENT_METRICS_TOPIC_REPLICATION: 3
         PORT: 9021
       networks:
         - internal
@@ -148,21 +204,21 @@ services:
   kafka-topics-generator:
     image: confluentinc/cp-kafka:latest
     depends_on:
-      - kafka-1
+      - kafka1
     entrypoint: [ '/bin/sh', '-c' ]
     command: |
       "
-      # blocks until kafka-1 is reachable
-      kafka--topics --bootstrap-server kafka-1:19092 --list
+      # blocks until kafka1 is reachable
+      kafka--topics --bootstrap-server kafka1:19092 --list
 
-      echo -e 'Creating kafka-1 topics'
-      kafka-topics --bootstrap-server kafka-1:19092 --create --if-not-exists --topic user --replication-factor 1 --partitions 2
-      kafka-topics --bootstrap-server kafka-1:19092 --create --if-not-exists --topic hub --replication-factor 1 --partitions 2
-      kafka-topics --bootstrap-server kafka-1:19092 --create --if-not-exists --topic node --replication-factor 1 --partitions 2
-      kafka-topics --bootstrap-server kafka-1:19092 --create --if-not-exists --topic project --replication-factor 1 --partitions 2
+      echo -e 'Creating kafka1 topics'
+      kafka-topics --bootstrap-server kafka1:19092 --create --if-not-exists --topic user --replication-factor 3 --partitions 3
+      kafka-topics --bootstrap-server kafka1:19092 --create --if-not-exists --topic hub --replication-factor 3 --partitions 3
+      kafka-topics --bootstrap-server kafka1:19092 --create --if-not-exists --topic node --replication-factor 3 --partitions 3
+      kafka-topics --bootstrap-server kafka1:19092 --create --if-not-exists --topic project --replication-factor 3 --partitions 3
 
       echo -e 'Successfully created the following topics:'
-      kafka-topics --bootstrap-server kafka-1:19092 --list
+      kafka-topics --bootstrap-server kafka1:19092 --list
       "
     networks:
       - internal
