--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -119,7 +119,7 @@ services:
     depends_on:
       - zookeeper
     volumes:
-      - ./kafka_data-1:/kafka_data-1
+      - ./kafka1/data:/var/lib/kafka/data
 
     networks:
       - internal
@@ -146,7 +146,7 @@ services:
     depends_on:
       - zookeeper
     volumes:
-      - ./kafka_data-2:/kafka_data-2
+      - ./kafka2/data:/var/lib/kafka/data
 
     networks:
       - internal
@@ -173,7 +173,7 @@ services:
     depends_on:
       - zookeeper
     volumes:
-      - ./kafka_data-3:/kafka_data-3
+      - ./kafka3/data:/var/lib/kafka/data
 
     networks:
       - internal
