Transporter changed to TCP

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,4 @@
-version: "3.3"
+version: "3.8"
 
 services:
 
@@ -32,7 +32,6 @@ services:
       - zookeeper
     networks:
       - internal
-  
   
   user:
     container_name: user
@@ -93,7 +92,10 @@ services:
     environment:
       - ALLOW_ANONYMOUS_LOGIN=yes
       - ZOOKEEPER_CLIENT_PORT=2181
-    
+    volumes:
+      - ./vol1/zk-data:/var/lib/zookeeper/data
+      - ./vol2/zk-txn-logs:/var/lib/zookeeper/log
+
     networks:
       - internal
 
@@ -119,7 +121,7 @@ services:
     depends_on:
       - zookeeper
     volumes:
-      - ./kafka1/data:/var/lib/kafka/data
+      - ./vol3/kafka1-data:/var/lib/kafka/data
 
     networks:
       - internal
@@ -146,7 +148,7 @@ services:
     depends_on:
       - zookeeper
     volumes:
-      - ./kafka2/data:/var/lib/kafka/data
+      - ./vol3/kafka2-data:/var/lib/kafka/data
 
     networks:
       - internal
@@ -173,7 +175,7 @@ services:
     depends_on:
       - zookeeper
     volumes:
-      - ./kafka3/data:/var/lib/kafka/data
+      - ./vol3/kafka3-data:/var/lib/kafka/data
 
     networks:
       - internal
@@ -197,31 +199,11 @@ services:
         CONTROL_CENTER_INTERNAL_TOPICS_PARTITIONS: 3
         CONTROL_CENTER_MONITORING_INTERCEPTOR_TOPIC_PARTITIONS: 3
         CONFLUENT_METRICS_TOPIC_REPLICATION: 3
+        CONTROL_CENTER_SCHEMA_REGISTRY_URL: "http://schema-registry:8081"
+
         PORT: 9021
       networks:
         - internal
-
-  kafka-topics-generator:
-    image: confluentinc/cp-kafka:latest
-    depends_on:
-      - kafka1
-    entrypoint: [ '/bin/sh', '-c' ]
-    command: |
-      "
-      # blocks until kafka1 is reachable
-      kafka--topics --bootstrap-server kafka1:19092 --list
-
-      echo -e 'Creating kafka1 topics'
-      kafka-topics --bootstrap-server kafka1:19092 --create --if-not-exists --topic user --replication-factor 3 --partitions 3
-      kafka-topics --bootstrap-server kafka1:19092 --create --if-not-exists --topic hub --replication-factor 3 --partitions 3
-      kafka-topics --bootstrap-server kafka1:19092 --create --if-not-exists --topic node --replication-factor 3 --partitions 3
-      kafka-topics --bootstrap-server kafka1:19092 --create --if-not-exists --topic project --replication-factor 3 --partitions 3
-
-      echo -e 'Successfully created the following topics:'
-      kafka-topics --bootstrap-server kafka1:19092 --list
-      "
-    networks:
-      - internal
 
   traefik:
     hostname: traefik
@@ -264,6 +246,3 @@ services:
 
 networks:
   internal:
-
-volumes:
-  data:
