--- a/docker-compose.env
+++ b/docker-compose.env
@@ -2,4 +2,5 @@ NAMESPACE=nexar-xm
 LOGGER=true
 LOGLEVEL=info
 SERVICEDIR=services
-TRANSPORTER=kafka://kafka1:19092
+#TRANSPORTER=kafka://kafka1:19092
+TRANSPORTER=TCP
