--- a/package.json
+++ b/package.json
@@ -26,14 +26,17 @@
   },
   "dependencies": {
     "@moleculer/channels": "^0.1.2",
+    "ioredis": "^5.2.3",
     "kafkajs": "^2.2.0",
     "moleculer": "^0.14.23",
+    "moleculer-axios": "^0.1.3",
     "moleculer-db": "^0.8.19",
     "moleculer-db-adapter-sequelize": "^0.2.15",
     "moleculer-prometheus": "^0.2.5",
     "moleculer-web": "^0.10.2",
     "pg": "^8.8.0",
-    "pg-hstore": "^2.3.4"
+    "pg-hstore": "^2.3.4",
+    "pkce-challenge": "^3.0.0"
   },
   "engines": {
     "node": ">= 12.x.x"
