--- a/package.json
+++ b/package.json
@@ -26,17 +26,28 @@
   },
   "dependencies": {
     "@moleculer/channels": "^0.1.2",
+    "crypto": "^1.0.1",
+    "image-size": "^1.0.2",
     "ioredis": "^5.2.3",
+    "jimp": "^0.16.2",
     "kafkajs": "^2.2.0",
+    "mime-types": "^2.1.35",
+    "mkdirp": "^1.0.4",
     "moleculer": "^0.14.23",
     "moleculer-axios": "^0.1.3",
     "moleculer-db": "^0.8.19",
     "moleculer-db-adapter-sequelize": "^0.2.15",
     "moleculer-prometheus": "^0.2.5",
     "moleculer-web": "^0.10.2",
+    "moment": "^2.29.4",
+    "path": "^0.12.7",
+    "pdf-lib": "^1.17.1",
+    "pdf-parse": "^1.1.1",
+    "pdf-signatures": "^0.1.0",
     "pg": "^8.8.0",
     "pg-hstore": "^2.3.4",
-    "pkce-challenge": "^3.0.0"
+    "pkce-challenge": "^3.0.0",
+    "uuidv4": "^6.2.13"
   },
   "engines": {
     "node": ">= 12.x.x"
